feat(testing/week2-mockmvc) - 코드 정정
Signed-off-by: inspire12 <ox4443@naver.com>

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -6,8 +6,19 @@ endif::[]
 :toclevels: 2
 :sectlinks:
 
-[[get-post]]
-== get
+[[get-posts]]
+== 게시글 보기
+
+==== HTTP request
+
+include::{snippets}/get-post/http-request.adoc[]
+
+==== HTTP response
+
+include::{snippets}/get-post/http-response.adoc[]
+
+[[get-posts]]
+== 게시글 목록보기
 
 ==== HTTP request
 
